fixed carousel alignment issue

--- a/client/src/components/carousel/carousel.css
+++ b/client/src/components/carousel/carousel.css
@@ -1,37 +1,17 @@
 .carousel {
   position: relative;
   width: 100%;
-  height: 100vh;
   overflow: hidden;
   border-radius: 20px;
-
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
     rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-}
-
-.carousel-inner {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: opacity 0.5s ease-in-out;
-}
-.carousel-inner.fading {
-  opacity: 0.5;
+  pointer-events: none;
 }
 
 .carousel-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-
-  transition: filter 0.5s ease-in-out;
-}
-
-.carousel-image:hover {
-  filter: brightness(0.8);
 }
 
 .carousel-button {
